create css style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./Fwd_ ARQUIVOS LOGOTIPO/LOGO WEB FUNDO TRANSPARENTE.png"
+          src="./assets/LOGO WEB FUNDO TRANSPARENTE.png"
           alt="Logotipo da empresa Santino Representações"
         />
         <p>Santino Representações</p>
