--- a/index.html
+++ b/index.html
@@ -21,31 +21,30 @@
         />
         <p>Santino Representações</p>
       </div>
-        <ul>
-          <li>
-            <a href="#" target="_blank">Conheça a empresa</a>
-          </li>
-          <li>
-            <a href="#" target="_blank">Principais representadas</a>
-          </li>
-          <li>
-            <a href="#" target="_blank">Entre em contato</a>
-          </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="#" target="_blank">Conheça a empresa</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Principais representadas</a>
+        </li>
+        <li>
+          <a href="https://wa.me/5511971606988" target="_blank"
+            >Entre em contato!
+          </a>
+        </li>
+      </ul>
 
-        <div id="social-links">
-          <a href="https://www.instagram.com/santinoebrandao/" target="_blank">
-            <ion-icon name="logo-instagram"></ion-icon>
-          </a>
-          <a href="https://www.linkedin.com/in/jeronimosantino" target="_blank">
-            <ion-icon name="logo-linkedin"></ion-icon>
-          </a>
-        </div>
-        <footer>
-          -Slogan Santino-
-        </footer>
+      <div id="social-links">
+        <a href="https://www.instagram.com/santinoebrandao/" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.linkedin.com/in/jeronimosantino" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
       </div>
-
+      <footer>-Slogan Santino-</footer>
+    </div>
 
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
