--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p id="3">- Missão</p>
         <p id="4">Nossa missão é fornecer produtos alimentícios de alta qualidade, representando marcas de confiança, e oferecendo um atendimento excepcional para garantir a satisfação de nossos clientes</p>
         <p id="5">- Visão</p> 
-        <p id="6">Ser reconhecida como a principal empresa de representação comercial no ramo de alimentos na Grande São Paulo e ABCDM, destacando-se pela excelência no serviço, inovação constante e parcerias duradouras com clientes e fornecedores. Aspiramos crescer de forma sustentável, mantendo a integridade e a qualidade em todas as nossas operações.</p>
+        <p id="6">Ser reconhecida como a principal empresa do ramo na Grande São Paulo e ABCDM, destacando-se pela excelência no serviço, inovação constante e parcerias duradouras com clientes e fornecedores. Aspiramos crescer de forma sustentável, mantendo a integridade e a qualidade em todas as nossas operações.</p>
         <p id="7">- Valores</p>
         <p id="8">Nossos valores são baseados na integridade, qualidade, inovação, sustentabilidade, colaboração e satisfação do cliente. Acreditamos em agir com transparência e ética, comprometendo-nos com a excelência dos produtos e serviços que oferecemos. </p>
         <p id="">Principais representadas:</p>
