--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div id="meet">
     
-        <p id="1">Conhça a empresa</p>
+        <p id="1">Conheça a empresa</p>
         <p id="2">Há mais de uma década no mercado, a Santino Representações se destaca como uma referência em representação comercial no ramo de alimentos. Atendendo toda a região da Grande São Paulo e ABCDM, nossa empresa se orgulha de oferecer produtos de alta qualidade e um atendimento personalizado. Com um compromisso constante com a satisfação dos nossos clientes e parceiros, buscamos sempre as melhores soluções para o seu negócio. Conte conosco para levar o melhor da indústria alimentícia até você.</p>
         <p id="3">- Missão</p>
         <p id="4">Nossa missão é fornecer produtos alimentícios de alta qualidade, representando marcas de confiança, e oferecendo um atendimento excepcional para garantir a satisfação de nossos clientes</p>
